--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,5 +1,4 @@
 body {
-  padding: 50px;
   background-color: #f1f1f1;
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
@@ -172,6 +171,8 @@ float:left;width:22%;
     border-color: #4a8b2e;
     border-radius: 3px;
     color: #383838;
+    padding-right: 3px;
+    padding-left: 3px;
 }
 .label-primary:hover {
     cursor:pointer;
@@ -283,6 +284,7 @@ float:left;width:22%;
 }
 .row{
     margin-left:0px;
+    margin-right:0px;
 }
 
 #tipHeader.active, #tipHeader.focus, #tipHeader:active, #tipHeader:focus, #tipHeader:hover{
@@ -313,7 +315,12 @@ float:left;width:22%;
     //transition: 0.5s linear opacity;
    // opacity: 1;
 }
-ul,ol{
+#profileLoggedIn{
+    position: absolute;
+   top: 17px;
+    right: 75px;
+}
+ol{
     display:inline-block;   
      overflow: hidden;
     
@@ -369,10 +376,45 @@ li{
     background-color: darkgray;
     border-color: darkslateblue;
 }
+.packWrapper{
+margin-bottom:5px;
+padding:5px;
+border-radius: 3px;
+}
+.packWrapper:hover{
+    cursor: pointer;
+    background-color: #f6fff3;
+}
+.packWrapper.active{
+    cursor: pointer;
+    background-color: #f6fff3;
+    border-style: solid;    
+    border-width: thin;
+    border-color: #4a8b2e;
+}
+.sampleRowWrapper{
+    border-bottom-style: solid;
+    border-bottom-width: thin;
+    margin-bottom:3px;
+    border-bottom-color: #cccccc;
+}
+.hover:hover{
+    cursor:pointer;
+}
 
-
+.playbtn{
+    font-size: 125%;
+    
+}
 
 //ABOUT
 .aboutImg{
     width:457px;
+}
+
+
+.col-lg-1, .col-lg-10, .col-lg-11, .col-lg-12, .col-lg-2, .col-lg-3, .col-lg-4, .col-lg-5, .col-lg-6, .col-lg-7, .col-lg-8, .col-lg-9, .col-md-1, .col-md-10, .col-md-11, .col-md-12, .col-md-2, .col-md-3, .col-md-4, .col-md-5, .col-md-6, .col-md-7, .col-md-8, .col-md-9, .col-sm-1, .col-sm-10, .col-sm-11, .col-sm-12, .col-sm-2, .col-sm-3, .col-sm-4, .col-sm-5, .col-sm-6, .col-sm-7, .col-sm-8, .col-sm-9, .col-xs-1, .col-xs-10, .col-xs-11, .col-xs-12, .col-xs-2, .col-xs-3, .col-xs-4, .col-xs-5, .col-xs-6, .col-xs-7, .col-xs-8, .col-xs-9 {
+
+    padding-right: 0px;
+
 }
