sample download fix

--- a/views/samples-list.jade
+++ b/views/samples-list.jade
@@ -43,6 +43,6 @@ ul.panel-body.comment-detail-list(style='margin-top:25px;')
 				span {{sample.bpm}}
 			div.other(style='float:right')
 				span.hover.glyphicon.glyphicon-heart(style='margin-right:5px;')
-				a(target="_self" id='download{{sample._id}}' ng-click='downloadClicked(sample)'")
+				a(target="_self" id='download{{sample._id}}' ng-click='downloadClicked(sample)')
 					span.hover.glyphicon.glyphicon-download(style='margin-right:5px;')
 				span.hover.glyphicon.glyphicon-menu-hamburger(style='margin-right:5px;')
