download handle by controller

--- a/views/samples-list.jade
+++ b/views/samples-list.jade
@@ -44,6 +44,7 @@ ul.panel-body.comment-detail-list(style='margin-top:25px;')
 			div.other(style='float:right')
 				span.hover.glyphicon.glyphicon-edit(style='margin-right:5px;' ng-click='editSampleClicked(sample)' ng-show='adminAuth')
 				span.hover.glyphicon.glyphicon-heart(style='margin-right:5px;')
+				a(id='download{{sample._id}}' ng-click='downloadClicked(sample)' )
 					span.hover.glyphicon.glyphicon-download(style='margin-right:5px;')
 				span.hover.glyphicon.glyphicon-menu-hamburger(style='margin-right:5px;')
 	div#editSampleWrapper(ng-show='editToggle')
