--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -11,9 +11,7 @@ p {
     border-radius: 5px;
 }
 .pageController{
-    margin:0 auto;
-    width:90%;
-    max-width:966px;
+
 }
 .formInputWrapper{
     background-color: white;
@@ -194,6 +192,7 @@ float:left;width:22%;
 
 }
 
+
 .alert-info,.alert-warning {
     color: #31708f;
     background-color: #f6fff3;
@@ -208,11 +207,33 @@ float:left;width:22%;
 .canvasjs-chart-credit{
     visibility: hidden;
 }
+.navBarBottomRow{
+    position:relative;
+    top:-20px;
+    height:125px;
+}
 
-#navBarWrapper{
-    float: left;
-    width: 20%;
-    max-width: 200px;
+.navBarBottomRowOverlap{
+    background-color: #777;
+    position: relative;
+    top: -126px;
+
+    opacity: .7;
+    max-height: 94px;
+    color: #f1f1f1;
+    text-align: center;
+    font-size: small;
+       
+}
+.navBarTopDiv{
+    background-color:#f1f1f1;
+    z-index:1;
+    position:relative;
+    opacity: 0.9;
+    color:black;
+    padding:5px;
+}
+#navBarWrapper{  
     background-color: white;
     border-radius: 5px;
     padding: 5px;
@@ -220,6 +241,20 @@ float:left;width:22%;
     border-style: solid;
     border-width: thin;
 }
+.tipNavItem{
+    max-height: 40px;
+    transition: max-height 0.15s ease-out;
+    overflow: hidden;
+    border-bottom-style: solid;
+    border-bottom-width:  thin;
+    border-bottom-color: #d4d4d4;
+
+}
+.tipNavItem:hover{
+    max-height: 125px;
+    transition: max-height 0.5s ease-in;
+}
+
 #tipTitle{
     
     display: inline-block;
@@ -352,11 +387,7 @@ li{
    
 }
 
-.pageController{
-    margin:0 auto;
-    width:90%;
-    max-width:966px;
-}
+
 
 #tipWrapper{
     transition: all 1s ease-in-out;
